--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 applications:
-- name: whatson
+- name: dang
   memory: 256M
   buildpack: https://github.com/cloudfoundry/php-buildpack
   timeout: 60
