--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan cache:clear",
             "@php artisan package:discover"
         ]
     },
