--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
             "@php artisan key:generate"
         ],
         "post-autoload-dump": [
+            "mkdir bootstrap/cache",
             "chmod -R 777 bootstrap/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
