--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 APP_ENV=production
 APP_KEY=base64:LwTtglqjjGKxHcCDIyOAOyrdU9MUxjXpsUagB3ZkSto=
 APP_DEBUG=false
-APP_URL=http://dang.mybluemix.net
+APP_URL=https://dang.mybluemix.net
 
 DB_CONNECTION=mysql
 DB_HOST=
