create folder storage and add random-route: true to manifest.yml

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         ],
         "post-autoload-dump": [
             "mkdir bootstrap/cache",
+            "mkdir storage",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ]
