--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,10 @@
         "post-autoload-dump": [
             "mkdir bootstrap/cache",
             "mkdir storage",
+            "mkdir storage/framework",
+            "mkdir storage/framework/sessions",
+            "mkdir storage/framework/views",
+            "mkdir storage/framework/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ]
