update composer.json / .cfignore / manifest.yml

--- a/composer.json
+++ b/composer.json
@@ -50,16 +50,14 @@
             "mkdir -p bootstrap/cache",
             "mkdir -p storage/framework/sessions",
             "mkdir -p storage/framework/views",
-            "mkdir -p storage/framework/cache",
-            "php artisan optimize"
+            "mkdir -p storage/framework/cache"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "mkdir -p bootstrap/cache",
             "mkdir -p storage/framework/sessions",
             "mkdir -p storage/framework/views",
-            "mkdir -p storage/framework/cache",
-            "php artisan optimize"
+            "mkdir -p storage/framework/cache"
         ],
         "post-autoload-dump": [
             "mkdir bootstrap/cache",
