--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "naughtonium/laravel-dark-sky": "1.2.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -47,20 +49,20 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "mkdir -p bootstrap/cache",
-            "mkdir -p storage/framework/sessions",
-            "mkdir -p storage/framework/views",
-            "mkdir -p storage/framework/cache"
+            "@mkdir -p bootstrap/cache",
+            "@mkdir -p storage/framework/sessions",
+            "@mkdir -p storage/framework/views",
+            "@mkdir -p storage/framework/cache"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "mkdir -p bootstrap/cache",
-            "mkdir -p storage/framework/sessions",
-            "mkdir -p storage/framework/views",
-            "mkdir -p storage/framework/cache"
+            "@mkdir -p bootstrap/cache",
+            "@mkdir -p storage/framework/sessions",
+            "@mkdir -p storage/framework/views",
+            "@mkdir -p storage/framework/cache"
         ],
         "post-autoload-dump": [
-            "mkdir bootstrap/cache",
+            "@mkdir bootstrap/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ]
